sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: value Sort is not a member of object List
List.Sort()
     ^